feat: remove hardcoded subclass family/never-subclassed restrictions
VillageMaster.class groups analogous classes across races into mutually
exclusive subclass slots (e.g. Sorcerer/Spellsinger/Spellhowler) and
permanently bans Overlord/Warsmith as subclasses, with no config toggle
for either — reflectively clear/restore those static collections at
boot instead of patching the closed-source GameServer.jar.

Elf/Dark-Elf mutual subclass ban is left untouched (inline bytecode,
not a data field).